created instructor registration endpoints
