# public/swagger.json
@@ -6,8 +6,41 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Pick_Admin.Exclude_keyofAdmin.otp-or-id-or-isVerified__": {
+				"properties": {
+					"Name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"Name",
+					"email",
+					"password"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Admin.otp-or-id-or-isVerified_": {
+				"$ref": "#/components/schemas/Pick_Admin.Exclude_keyofAdmin.otp-or-id-or-isVerified__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"RegisterAdminType": {
+				"$ref": "#/components/schemas/Omit_Admin.otp-or-id-or-isVerified_"
+			},
 			"Pick_Participant.Exclude_keyofParticipant.otp-or-id-or-isVerified__": {
 				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
 					"DOB": {
 						"type": "string",
 						"format": "date-time"
@@ -15,16 +48,10 @@
 					"createdAt": {
 						"type": "string"
 					},
-					"email": {
-						"type": "string"
-					},
 					"firstName": {
 						"type": "string"
 					},
 					"lastName": {
-						"type": "string"
-					},
-					"password": {
 						"type": "string"
 					},
 					"phoneNumber": {
@@ -39,9 +66,9 @@
 				},
 				"required": [
 					"email",
+					"password",
 					"firstName",
-					"lastName",
-					"password"
+					"lastName"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
@@ -55,19 +82,19 @@
 			},
 			"Pick_Instructor.Exclude_keyofInstructor.otp-or-id-or-isVerified__": {
 				"properties": {
-					"createdAt": {
+					"email": {
 						"type": "string"
 					},
-					"email": {
+					"password": {
+						"type": "string"
+					},
+					"createdAt": {
 						"type": "string"
 					},
 					"firstName": {
 						"type": "string"
 					},
 					"lastName": {
-						"type": "string"
-					},
-					"password": {
 						"type": "string"
 					},
 					"phoneNumber": {
@@ -85,9 +112,9 @@
 				},
 				"required": [
 					"email",
+					"password",
 					"firstName",
 					"lastName",
-					"password",
 					"resume"
 				],
 				"type": "object",
@@ -127,6 +154,284 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/api/auth/register/admin": {
+			"post": {
+				"operationId": "RegisterAdmin",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RegisterAdminType"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/verify/admin-email": {
+			"post": {
+				"operationId": "VerifyAdminEmail",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"verification_code": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"verification_code",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/resend/admin-otp": {
+			"post": {
+				"operationId": "ResendAdminOTP",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/login/admin": {
+			"post": {
+				"operationId": "LoginAdmin",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"password": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"password",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/forgot/admin-password": {
+			"post": {
+				"operationId": "ForgotAdminPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/reset/admin-password": {
+			"post": {
+				"operationId": "ResetAdminPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"password": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"password",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/update/admin-password": {
+			"post": {
+				"operationId": "UpdateAdminPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"newPassword": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									},
+									"currentPassword": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"newPassword",
+									"email",
+									"currentPassword"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/auth/register/participant": {
 			"post": {
 				"operationId": "RegisterParticipant",
@@ -549,6 +854,132 @@
 								"required": [
 									"password",
 									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/forgot/instructor-password": {
+			"post": {
+				"operationId": "ForgotInstructorPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/reset/instructor-password": {
+			"post": {
+				"operationId": "ResetInstructorPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"password": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"password",
+									"email"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/auth/update/instructor-password": {
+			"post": {
+				"operationId": "UpdateInstructorPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication controller Options"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"newPassword": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									},
+									"currentPassword": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"newPassword",
+									"email",
+									"currentPassword"
 								],
 								"type": "object"
 							}
