# src/contollers/auth/authController.ts
@@ -1,9 +1,10 @@
 import { AuthService } from "../../services";
-import { Instructor,Participant,User } from "../../types";
+import { Admin,Instructor,Participant,User } from "../../types";
 import { Body, Post, Route, Tags } from "tsoa";
 
 export type RegisterParticipantType = Omit<Participant, "otp" | "id" | "isVerified">;
 export type RegisterInstructorType = Omit<Instructor,"otp" | "id" | "isVerified">;
+export type RegisterAdminType = Omit<Admin,"otp" | "id" | "isVerified">;
 
 @Route("/api/auth")
 @Tags("Authentication controller Options")
@@ -11,13 +12,69 @@ export default class AuthController {
 	public login(user: User, isVerify: string): User | undefined {
 		return new AuthService().login(user, isVerify);
 	}
+  // Admin
+  @Post("/register/admin")
+	public async registerAdmin(@Body() data: RegisterAdminType): Promise<any> {
+		return new AuthService().registerAdmin(data);
+	}
+
+  @Post("/verify/admin-email")
+  public async verifyAdminEmail(
+    @Body() data: { email: string; verification_code: string }
+  ): Promise<any> {
+  	return new AuthService().verifyAdminEmail(data);
+  }
+
+  @Post("/resend/admin-otp")
+  public async resendAdminOTP(@Body() data: { email: string }): Promise<any> {
+  	return new AuthService().resendAdminOTP(data);
+  }
+
+  @Post("/login/admin")
+  public async loginAdmin(
+    @Body() data: { email: string; password: string }
+  ): Promise<any> {
+  	return new AuthService().loginAdmin(data);
+  }
+
+  @Post("/forgot/admin-password")
+  public async forgotAdminPassword(
+    @Body() data: { email: string }
+  ): Promise<any> {
+  	return new AuthService().forgotAdminPassword(data);
+  }
+
+  @Post("/reset/admin-password")
+  public async resetAdminPassword(
+    @Body()
+    	data: {
+      email: string;
+      password: string;
+    }
+  ): Promise<any> {
+  	return new AuthService().resetAdminPassword(data);
+  }
+
+  @Post("/update/admin-password")
+  public async updateAdminPassword(
+    @Body()
+    	data: {
+      currentPassword: string;
+      email: string;
+      newPassword: string;
+    }
+  ): Promise<any> {
+  	return new AuthService().updateAdminPassword(data);
+  }
+
+  //Participants
 
   @Post("/register/participant")
-	public async registerParticipant(
+  public async registerParticipant(
     @Body() data: RegisterParticipantType
-	): Promise<any> {
-		return new AuthService().registerParticipant(data);
-	}
+  ): Promise<any> {
+  	return new AuthService().registerParticipant(data);
+  }
 
   @Post("/verify/participant-email")
   public async verifyParticipantEmail(
@@ -69,6 +126,8 @@ export default class AuthController {
   ): Promise<any> {
   	return new AuthService().updateParticipantPassword(data);
   }
+
+  //Instructor
 
   @Post("/register/instructor")
   public async RegisterInstructor(
